Update to Jakarta EE v9.1 - luminositylabs-config project version updated from v0.8.0.71-SNAPSHOT to v0.11.0.71-SNAPSHOT - luminositylabs-oss-parent parent project updated from v0.2.8-SNAPSHOT to v0.3.3-SNAPSHOT - update source code to migrate javax namespace usage to jakarta - update beans.xml files to xml headers for CDI v3 - update CI to build w/ minimum of Java11 - arquillian-payara-containers updated from v2.5 to v3.1 - payara updated from v5.2022.5 to v6.2024.8 - reordered maven dependency ordering in dependency management to make explicit arquillian declarations override payara bom - replaced arquillian payara container dependencies for ee7/ee8 with ee9 - added comments in payara-micro-managed maven profile dependency - updated argLine in maven-failsafe-plugin config to specify --add-exports/-add-opens args for Payara6 - removed payara-server-embedded-no-jpms profile - updated maven-version-rules.xml to change rules from Payara5 to Payara6
Signed-off-by: Phillip Ross <phillip.w.g.ross@gmail.com>